smithy-model/src/test/resources/software/amazon/smithy/model/loader/invalid/apply-requires-newline.smithy
// Parse error at line 4, column 29 near `string`: Expected a line break | Model
namespace com.foo
string SomeShape
apply SomeShape @deprecated string AnotherString
